# lingzhou-agent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.en.md  README.md  README.zh.md  lingzhou.json.example  pyproject.toml
channels/: runtime.py  webhook.py  wechat.py
cli/: _common.py  auth.py  bootstrap.py  chat.py  dev.py  dev_helpers.py  diag.py  gateway.py  logs.py
core/: __init__.py  behavior_tracker.py  config.py  evolution.py  evolution.py.lingzhou-backup  execution.py  execution_helpers.py  import_boundary_check.py  judgment.py  log_fields.py  loop.py  self_drive.py  skill.py  smoke_tests.py  soul.py  worker.py  workspace_defaults.py
core/config/: __init__.py  budget.py  loader.py
core/config_models/: __init__.py  advanced.py  base.py  runtime.py
core/contracts/: __init__.py  execution.py  probe.py  tools.py
core/cortex/: __init__.py  action_first.py  actions.py  autoworkbench.py  guard.py  intent.py  workspace.py
core/evolution/: smoke.py  soft.py  tool.py
core/execution/: __init__.py  helpers.py  layer.py  routing.py  run_profile.py  task_tier.py  workers.py
core/judgment/: __init__.py  _executor_helpers.py  context.py  executor.py  frame.py  output.py  runtime.py  tiers.py
core/loop/: __init__.py  chat.py  common.py  continue_phase.py  dispatcher.py  driver.py  logging.py  routing_overrides.py  runtime.py  startup.py  tick.py
core/maintenance/: __init__.py  memory_compaction.py  runtime_compaction.py
core/metabolic/: __init__.py  engine.py  fact_lifecycle.py  lifecycle_utils.py  run_lifecycle.py  semantic_lifecycle.py  soul_lifecycle.py  state_writer.py  task_lifecycle.py
core/paths/: __init__.py
core/perception/: emotion.py  ethos.py  layer.py  signals.py
core/persona/: __init__.py  engine.py  identity_bootstrap.py  (+2 more)
docs/: ARCHITECTURE.en.md  ARCHITECTURE.md  BLUEPRINT_DIGITAL_LIFE.md  CONFIG.en.md  CONFIG.md  DEVIATION_REVIEW.en.md  DEVIATION_REVIEW.md  PLUGIN.en.md  PLUGIN.md  PROBE.en.md  PROBE.md  SELF_DRIVE.en.md  SELF_DRIVE.md  TOOLS.en.md  TOOLS.md  history-internalization.md  status-2026-05-15-localization-closeout.md
memory/: consolidation.py  quality_checker.py  semantic.py  task_store.py  working.py
prompts/: judgment.md
provider/: __init__.py  capabilities.py  catalog.py  codex_oauth.py  models.json  models_gen.py  openai_compat.py  openai_compat_helpers.py
scripts/: check_import_boundaries.py  lingzhou-systemd-wrapper.sh  run_governance_checks.sh  split_tests.py
store/: auth.py  compact.py
tests/: conftest.py  test_boundary_contracts.py  test_cognition.py  test_concurrent.py  test_core.py  test_cortex.py  test_execution_routing.py  test_execution_run_profile.py  test_focus_coordination.py  test_import_boundaries.py  test_judgment_ctx.py  test_judgment_layers.py  test_judgment_tiers.py  test_log_fields.py  test_logs.py  test_maintenance.py  test_memory.py  test_metabolic.py  test_mouth_and_wm_gate.py  test_oral_and_brain.py  test_probe_confidence.py  test_provider.py  test_run_driver.py  test_smoke.py  test_task_store.py  test_tick_dispatcher.py  test_tools.py
tools/: __init__.py  ask.py  browser.py  config.py  config_ops.py  exec.py  exec_helpers.py  file.py  file_helpers.py  image.py  image_gen.py  memory.py  memory_ops.py  paths.py  plan.py  probe.py  probe_ops.py  registry.py  shell.py  skill.py  skill_ops.py  subagent.py  task.py  tts.py  view_protocols.py  web.py  workbench.py
(+144 files in other folders)
