[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lingzhou"
version = "0.1.0"
description = "自编程自进化认知 agent 种子"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["ai-agent", "llm", "self-evolving", "autonomous"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "typer>=0.12",
    "rich>=13.7",
    "requests>=2.32",
    "cryptography>=42.0",
]

[project.optional-dependencies]
# 向量语义检索（进阶选装，不安装时退化为关键词评分）
semantic = [
    "numpy>=1.26",
    "sentence-transformers>=3.0",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage    = "https://github.com/your-org/lingzhou"
Issues      = "https://github.com/your-org/lingzhou/issues"
Changelog   = "https://github.com/your-org/lingzhou/blob/main/CHANGELOG.md"

[project.scripts]
lingzhou = "lingzhou:main"

[tool.hatch.build.targets.wheel]
packages = ["channels", "cli", "core", "memory", "provider", "store", "tools"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
