[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lingzhou"
version = "0.1.0"
description = "自编程自进化认知 agent 种子"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["ai-agent", "llm", "self-evolving", "autonomous"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "typer>=0.12",
    "rich>=13.7",
    "requests>=2.32",
    "cryptography>=42.0",
]

[project.optional-dependencies]
# 向量语义检索（进阶选装，不安装时退化为关键词评分）
semantic = [
    "numpy>=1.26",
    "sentence-transformers>=3.0",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=6.0",
    "ruff>=0.9",
]

[project.urls]
Homepage    = "https://github.com/suuugeee/lingzhou-agent"
Repository  = "https://github.com/suuugeee/lingzhou-agent"
Issues      = "https://github.com/suuugeee/lingzhou-agent/issues"
Changelog   = "https://github.com/suuugeee/lingzhou-agent/blob/main/CHANGELOG.md"

[project.scripts]
lingzhou = "cli.main:main"
lingzhou-check-imports = "core.import_boundary_check:main"

[tool.hatch.build.targets.wheel]
packages = ["channels", "cli", "core", "memory", "provider", "store", "tools"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# E/W: pycodestyle  F: pyflakes  I: isort  UP: pyupgrade  B: bugbear  SIM: simplify
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # 行长由 formatter 管，不重复报
    "B008",   # 函数默认参数调用（FastAPI / typer 常用）
    "SIM108", # 三元表达式强制（可读性优先）
]

[tool.ruff.lint.isort]
known-first-party = ["core", "store", "memory", "provider", "tools", "channels", "cli"]

[tool.ruff.lint.per-file-ignores]
# tick.py 为 tests/旧路径保留的兼容 re-export，符号在包内由子模块实现
"core/loop/tick/__init__.py" = ["F401", "I001"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
